# taks-manager

./: .gitignore  example.env  pyproject.toml
migrations/: 001-add_user_table.sql  001_add_user_table.py  002_add_task_table.py
task_manager/: __init__.py  __main__.py  constants.py  form_validators.py  forms.py  migrator.py  models.py  resources.py  views.py
tests/: __init__.py  test_forms.py  test_user_form.py
