[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Tomasz Kordiak <dotomika@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
peewee = "^3.14.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
